tests/baselines/reference/requireAsFunctionInExternalModule.errors.txt
tests/cases/compiler/m2.ts(1,10): error TS2305: Module '"tests/cases/compiler/m"' has no exported member 'hello'.


==== tests/cases/compiler/c.js (0 errors) ====
    export default function require(a) { }
    export function has(a) { return true }
    
==== tests/cases/compiler/m.js (0 errors) ====
    import require, { has } from "./c"
    export function hello() { }
    if (has('ember-debug')) {
        require('ember-debug');
    }
    
==== tests/cases/compiler/m2.ts (1 errors) ====
    import { hello } from "./m";
             ~~~~~
!!! error TS2305: Module '"tests/cases/compiler/m"' has no exported member 'hello'.
    hello();
    